Правки тестов.